# Orderflow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENCE  README.md  auction.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
data/: ...read me....txt  tbt.txt
data/5m/: ESH15-CME.scid_BarData__5m.txt  ESH16-CME.scid_BarData__5m.txt  ESH17-CME.scid_BarData__5m.txt  ESH18-CME.scid_BarData__5m.txt  ESH19-CME.scid_BarData__5m.txt  ESH20-CME.scid_BarData__5m.txt  ESH21-CME.scid_BarData__5m.txt  ESH22-CME.scid_BarData__5m.txt  ESH23-CME.scid_BarData__5m.txt  ESH24-CME.scid_BarData__5m.txt  ESM15-CME.scid_BarData__5m.txt  ESM16-CME.scid_BarData__5m.txt  ESM17-CME.scid_BarData__5m.txt  ESM18-CME.scid_BarData__5m.txt  ESM19-CME.scid_BarData__5m.txt  ESM20-CME.scid_BarData__5m.txt  ESM21-CME.scid_BarData__5m.txt  ESM22-CME.scid_BarData__5m.txt  ESM23-CME.scid_BarData__5m.txt  ESM24-CME.scid_BarData__5m.txt  ESU15-CME.scid_BarData__5m.txt  ESU16-CME.scid_BarData__5m.txt  ESU17-CME.scid_BarData__5m.txt  ESU18-CME.scid_BarData__5m.txt  ESU19-CME.scid_BarData__5m.txt  ESU20-CME.scid_BarData__5m.txt  ESU21-CME.scid_BarData__5m.txt  ESU22-CME.scid_BarData__5m.txt  ESU23-CME.scid_BarData__5m.txt  ESU24-CME.scid_BarData__5m.txt  ESZ15-CME.scid_BarData__5m.txt  ESZ16-CME.scid_BarData__5m.txt  ESZ17-CME.scid_BarData__5m.txt  ESZ18-CME.scid_BarData__5m.txt  ESZ19-CME.scid_BarData__5m.txt  ESZ20-CME.scid_BarData__5m.txt  ESZ21-CME.scid_BarData__5m.txt  ESZ22-CME.scid_BarData__5m.txt  ESZ23-CME.scid_BarData__5m.txt  ESZ24-CME.scid_BarData__5m.txt
data/tbt/: ...read me....txt
orderflow/: __init__.py  _version.py  _volume_factory.py  auctions.py  backtester.py  compressor.py  configuration.py  dom.py  exceptions.py  footprint.py  markov.py  markov_utilities.py  montecarlo.py  ohlc.py  paths.py  sc.py  stats.py  viz.py  volume_profile.py  volume_profile_kde.py  vwap.py
orderflow/analysis/: __init__.py
orderflow/analysis/regimes/: __init__.py
orderflow/analysis/simulation/: __init__.py
orderflow/analysis/statistics/: __init__.py
orderflow/backtester/: README.md  __init__.py  backtester.py  engine.py  examples.py  execution.py  exits.py  metrics.py  models.py  risk.py
orderflow/backtester_v1/: __init__.py  backtester.py
orderflow/backtester_v2/: engine.py  execution.py  metrics.py
orderflow/backtesting/: __init__.py
orderflow/compressor/: COMPRESSION_COMPLETE.md  FIXES_APPLIED.md  __init__.py  compressor.md  compressor.py
orderflow/core/: __init__.py
orderflow/data/: __init__.py
orderflow/data/ingest/: __init__.py
orderflow/data/transform/: __init__.py
orderflow/data/transform/bars/: __init__.py
orderflow/examples/: runner.py
orderflow/market/: __init__.py
orderflow/market/microstructure/: __init__.py  auctions.py  dom.py  footprint.py
orderflow/market/profiles/: __init__.py  volume_profile.py  volume_profile_kde.py  vwap.py
orderflow/market/utilities/: __init__.py  _volume_factory.py
orderflow/runners/: runner.py
orderflow/stats/: __init__.py  _validators.py  correlation.py  hypothesis.py  markov.py  markov_utilities.py  montecarlo.py  returns.py  stats.md  stats.py
orderflow/storage/: configuration.py  load_ticks_enriched_cli.py  load_ticks_raw_cli.py  service.py  storage_CLAUDE.md  storage_service.py
orderflow/storage/cli/: __init__.py  load_enriched.py  load_raw.py
orderflow/storage/sql/: create_function_upsert_ticks_enriched.sql  create_function_upsert_ticks_raw.sql  create_table_staging_ticks_enriched.sql  create_table_staging_ticks_raw.sql  create_table_ticks_enriched.sql  create_table_ticks_raw.sql  select_ticks_enriched_by_date_range.sql  select_ticks_enriched_by_month.sql  select_ticks_raw_by_date_range.sql  select_ticks_raw_by_month.sql
orderflow/test/: test_compressor_fix.py  test_volume_bars.py
orderflow/visualization/: __init__.py  viz.py
scripts/: setup_versioning.ps1  setup_versioning.sh
tests/: test_legacy_runner_compatibility.py
