[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "orderflow"
dynamic = ["version"]
description = "Orderflow trading data manager and data reshaper"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Andrea Ferrante", email = "nonicknamethankyou@gmail.com"}
]
keywords = ["orderflow", "trading", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "polars>=0.19.0",
    "matplotlib>=3.7.0",
    "hmmlearn>=0.2.7",
    "numba>=0.57.0",
    "plotly>=5.9.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/andreaferrante/orderflow"
Repository = "https://github.com/andreaferrante/orderflow.git"
Issues = "https://github.com/andreaferrante/orderflow/issues"
Documentation = "https://github.com/andreaferrante/orderflow/README.md"

[tool.setuptools]
packages = ["orderflow", "orderflow.backtester", "orderflow.compressor", "orderflow.stats"]
include-package-data = true

[tool.setuptools.package-data]
orderflow = ["py.typed"]

[tool.setuptools_scm]
write_to = "orderflow/_version.py"
write_to_template = "__version__ = '{version}'"
fallback_version = "0.4.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"
version_files = [
    "pyproject.toml:version",
    "orderflow/_version.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = false
style = [
    ["feat", "Features"],
    ["fix", "Bug Fixes"],
    ["refactor", "Refactoring"],
    ["perf", "Performance Improvements"],
    ["test", "Tests"],
    ["chore", "Chores"],
    ["docs", "Documentation"],
]