[metadata]
name = orderflow
version = 0.3.0
author = Andrea Ferrante
author_email = nonicknamethankyou@gmail.com
description = orderflow
long_description = file: README.md
long_description_content_type = orderflow/markdown
url = https://github.com/andreaferrante/orderflow
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
